# goldbox

./: .gitignore  README.md  docker_build.sh  docker_cheatsheet.txt  tmux-session.sh
cpp/: .cmake-format  .dockerignore  Dockerfile  docker-compose.yml
cpp/external_project/: CMakeLists.txt  main.cpp
cpp/lib/: CMakeLists.txt  install.sh
cpp/lib/cmake/: cxx20.cmake  install.cmake  my_config.cmake
cpp/lib/config/: iwyu_map_file.imp
cpp/lib/src/graph/: CMakeLists.txt
cpp/lib/src/graph/box/: algorithm.h  algorithm_details.h  edge.h  graph.h  list.h  node.h
cpp/lib/src/memory/: CMakeLists.txt
cpp/lib/src/memory/box/: unique_ptr.h  unique_ptr_impl.h
cpp/lib/src/metaprogramming/: CMakeLists.txt
cpp/lib/src/metaprogramming/box/: optional.h  optional_impl.h  tuple.h  tuple_impl.h  type_list.h  type_traits.h
cpp/lib/tests/: CMakeLists.txt
cpp/lib/tests/graph/: CMakeLists.txt  tst_graph.cpp
cpp/lib/tests/memory/: CMakeLists.txt  tst_unique_ptr.cpp
cpp/lib/tests/metaprogramming/: CMakeLists.txt  tst_optional.cpp  tst_tuple.cpp  tst_type_list.cpp  tst_type_traits.cpp
cpp/practice/: CMakeLists.txt  main.cpp
cpp/practice/src/: CMakeLists.txt
cpp/practice/src/concurrency/: CMakeLists.txt  atomics.cpp  atomics.h  cooperative_interruption.cpp  cooperative_interruption.h  shared_mutex.cpp  shared_mutex.h
cpp/practice/src/design_patterns/: CMakeLists.txt
cpp/practice/src/design_patterns/adapter/: CMakeLists.txt  rectangle.h  square.h  square_to_rectangle_adapter.h
cpp/practice/src/design_patterns/facade/: CMakeLists.txt  electricity.h  engine_facade.h  fuel_injector.h  ignition.h
cpp/practice/src/design_patterns/good_practices/: CMakeLists.txt  cppcon.h  examples.h
cpp/practice/src/design_patterns/singleton/: CMakeLists.txt  singleton_data.cpp  singleton_data.h
cpp/practice/src/design_patterns/strategy/: CMakeLists.txt  discriminant_strategy.cpp  discriminant_strategy.h
cpp/practice/src/metaprogramming/: CMakeLists.txt  args_counter.h  concepts.h  crtp.h  print.h  sfinae.h  sum.h
cpp/practice/src/other/: CMakeLists.txt  point.h  small_cpp17_features.h  small_cpp20_features.h
cpp/practice/src/ranges/: CMakeLists.txt  examples.h
cpp/practice/src/testing/: CMakeLists.txt  master_converter.cpp  master_converter.h  message_queue_sender.h
cpp/practice/tests/: CMakeLists.txt
cpp/practice/tests/concurrency/: CMakeLists.txt  tst_atomics.cpp  tst_shared_mutex.cpp
cpp/practice/tests/design_patterns/: CMakeLists.txt  tst_adapter.cpp  tst_facade.cpp  tst_singleton.cpp  tst_strategy.cpp
cpp/practice/tests/metaprogramming/: CMakeLists.txt  tst_args_counter.cpp  tst_concepts.cpp  tst_crtp.cpp  tst_print.cpp  tst_sfinae.cpp  tst_sum.cpp
cpp/practice/tests/mocks/: CMakeLists.txt
cpp/practice/tests/mocks/testing/: CMakeLists.txt  message_queue_mock.cpp  message_queue_mock.h
cpp/practice/tests/other/: CMakeLists.txt
cpp/practice/tests/ranges/: CMakeLists.txt  tst_examples.cpp
cpp/practice/tests/testing/: CMakeLists.txt  tst_master_converter.cpp  tst_message_queue_sender.cpp
qt/: Dockerfile  Dockerfile_fedora  Dockerfile_tools  docker-compose.yml  docker_build.sh  qtlicenses.ini
qt/qt6/MiniGames/: CMakeLists.txt  ConnectDots.qml  MainPage.qml  Memory.qml  MemoryData.qml  Settings.qml  SettingsData.qml  TicTacToe.qml  main.cpp  main.qml  mcu_loader.qmlproject  resources.qrc
qt_for_mcu/: .clang-format  Dockerfile  docker-compose.yml
qt_for_mcu/extras/: CMakeLists.txt  CircularLevel.qml  FlickableWrapper.qml  HealthScoreWidget.qml  HorizontalListView.qml  KeyboardPage.qml  LevelBar.qml  LiveMeasureBar.qml  MealPlanListModel.h  OnYourMenuWidget.qml  ProjectListDynamicText.qml  ProjectListPage.qml  Stepper.qml  ThreePartsLevelBar.qml  Tumbler.qml  clean.sh  extras.qml  extras.qmlproject  main.cpp  projectlistmodel.h
set_finder/: .clang-tidy  .dockerignore  Dockerfile  README.md  docker-compose.yml  libyuv_install_android.sh  notes.txt  todo.txt
set_finder/core/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py  contours_drawer.cpp  install_android.sh  main.cpp  notes.txt
set_finder/core/cmake/: SetFinderCoreConfig.cmake  install.cmake
set_finder/core/src/: CMakeLists.txt
set_finder/core/src/card_extractor/: CMakeLists.txt  contours_extractor.cpp  contours_extractor.h  corners_helper.cpp  corners_helper.h  extractor.cpp  extractor.h  filter_optimizer.cpp  filter_optimizer.h  image_filter.cpp  image_filter.h
set_finder/core/src/common/: card.h  types.h
set_finder/core/src/core/: CMakeLists.txt  engine_supervisor.cpp  engine_supervisor.h  set_engine.cpp  set_engine.h  set_finder.cpp  set_finder.h  set_generator.cpp  set_generator.h  set_processor.cpp  set_processor.h
set_finder/core/src/debugger/: CMakeLists.txt  image_writer.cpp  image_writer.h  set_debugger.cpp  set_debugger.h
set_finder/core/src/detector/: CMakeLists.txt  card_preprocessor.cpp  card_preprocessor.h  color_detector.cpp  color_detector.h  detector.h  number_detector.cpp  number_detector.h  shading_detector.cpp  shading_detector.h  shape_detector.cpp  shape_detector.h
set_finder/core/src/model/: CMakeLists.txt  color_detector_model.h  fdeep_color_detector.h
set_finder/core/src/utils/: CMakeLists.txt  algorithm.cpp  algorithm.h  color.h  combination.h  hist_utils.h  logger.cpp  logger.h  thread_pool.h  timer.h
set_finder/core/tests/: CMakeLists.txt
set_finder/core/tests/card_extractor/: CMakeLists.txt  tst_card_extractor.cpp
set_finder/core/tests/core/: CMakeLists.txt  tst_set_finder.cpp
set_finder/core/tests/detector/: CMakeLists.txt  tst_detector.cpp
set_finder/core/tests/mt/: CMakeLists.txt  tst_features.cpp
set_finder/core/tests/utils/: CMakeLists.txt  tst_thread_pool.cpp  tst_timer.cpp
set_finder/gui/android/app/src/main/cpp/: CMakeLists.txt  android_main.cpp  camera_engine.cpp  camera_engine.h  camera_listeners.cpp  camera_manager.cpp  camera_manager.h  preview_processor.cpp  preview_processor.h
set_finder/gui/qt/: CMakeLists.txt  main.cpp  main.qml  myitem.cpp  myitem.h
set_finder/gui/qt/android/: AndroidManifest.xml
(+67 files in other folders)
